discussion/kv_engine/163999/163999_rev23_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49071: Make engine-specific storage type-safe [1/2]

Using an interface type for the engine-specific storage allows us to
avoid reinterpret_casts from void* and to use smart pointers for
automatic memory management of objects with lifetime bound by the
command context.

This will be a two-part patch. This first part swaps out the underlying
void* storage with EngineStorageIface and ensures that memory
allocations are correctly accounted for, but it does not change the
interface of the (get|set)EngineStorage methods we use in
EventuallyPersistentEngine to acccess the stored data.

I will refactor those methods and their callers to EngineStorageIface
in a follow-up patch.

Change-Id: Idadd77ded7a7be14bf7ca290f7aa29861f294442

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-09-12 13:33:02.000000000
Message: 
Uploaded patch set 23.
----------------------------------------------------------------------------------------------------------------------
Author: Vesko Karaganev
Date: 2022-09-12 13:35:02.000000000
Message: 
Patch Set 23:

(2 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-12 13:54:55.000000000
Message: 
Patch Set 23: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21635/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21635/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20307/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/utilities/engine.cc:25:12: error: no matching conversion for functional-style cast from "std::weak_ptr<std::atomic_bool>" (aka "weak_ptr<atomic<bool> >") to "cb::IsValidInstanceFlag" [clang-diagnostic-error]
    return cb::IsValidInstanceFlag(
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/types.h:248:8: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from "std::weak_ptr<std::atomic_bool>" (aka "weak_ptr<atomic<bool> >") to "const cb::IsValidInstanceFlag" for 1st argument
struct IsValidInstanceFlag {
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/types.h:248:8: note: candidate constructor (the implicit move constructor) not viable: no known conversion from "std::weak_ptr<std::atomic_bool>" (aka "weak_ptr<atomic<bool> >") to "cb::IsValidInstanceFlag" for 1st argument
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/types.h:250:5: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
    IsValidInstanceFlag() = default;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/types.h:252:48: error: template argument for template type parameter must be a type [clang-diagnostic-error]
    explicit IsValidInstanceFlag(std::weak_ptr<std::atomic_bool> ptr)
                                               ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr.h:684:21: note: template parameter is declared here
  template<typename _Tp>
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/types.h:252:53: error: no member named "atomic_bool" in namespace "std"; did you mean "atomic_load"? [clang-diagnostic-error]
    explicit IsValidInstanceFlag(std::weak_ptr<std::atomic_bool> ptr)
                                                    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr_atomic.h:111:5: note: "atomic_load" declared here
    atomic_load(const shared_ptr<_Tp>* __p)
    ^
note: this fix will not be applied because it overlaps with another fix
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/types.h:252:53: error: no template named "atomic_bool" in namespace "std"; did you mean "atomic_load"? [clang-diagnostic-error]
    explicit IsValidInstanceFlag(std::weak_ptr<std::atomic_bool> ptr)
                                                    ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/shared_ptr_atomic.h:111:5: note: "atomic_load" declared here
    atomic_load(const shared_ptr<_Tp>* __p)
    ^
note: this fix will not be applied because it overlaps with another fix
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/types.h:258:20: error: no viable conversion from returned value of type "std::__shared_ptr_access<std::atomic<bool>, __gnu_cxx::_S_atomic, false, false>::element_type" (aka "std::atomic<bool>") to function return type "bool" [clang-diagnostic-error]
            return *strong;
                   ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20307/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/utilities/engine.cc:25:12:
error: no matching conversion for functional-style cast from "std::weak_ptr<std::atomic_bool>" (aka "weak_ptr<atomic<bool> >") to "cb::IsValidInstanceFlag" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20307/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49290/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\include\memcached/types.h(252): error C2039: "atomic_bool": is not a member of "std" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49290/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41431/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/memcached/types.h:252:53:
error: no template named "atomic_bool" in namespace "std"; did you mean "atomic_load"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41431/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10015/ : FAILURE

Compile error at [2022-09-12T13:36:54.112Z] ../kv_engine/include/memcached/types.h:252:53:
error: no template named "atomic_bool" in namespace "std"; did you mean "atomic_load"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10015/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10113/ : FAILURE

Compile error at [2022-09-12T13:40:40.965Z] ../kv_engine/include/memcached/types.h:252:53:
error: ?atomic_bool? is not a member of ?std?; did you mean ?atomic_load??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10113/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22279/ : FAILURE

Compile error at [2022-09-12T13:39:24.978Z] ../kv_engine/include/memcached/types.h:252:53:
error: ?atomic_bool? is not a member of ?std?; did you mean ?atomic_load??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22279/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22639/ : FAILURE

Compile error at [2022-09-12T13:41:36.507Z] ../kv_engine/include/memcached/types.h:252:53:
error: ?atomic_bool? is not a member of ?std?; did you mean ?atomic_load??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22639/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30680/ : FAILURE

Compile error at [2022-09-12T13:41:49.611Z] ../kv_engine/include/memcached/types.h:252:53:
error: no template named "atomic_bool" in namespace "std"; did you mean "atomic_load"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30680/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23402/ : FAILURE

Compile error at [2022-09-12T13:40:29.056Z] ../kv_engine/include/memcached/types.h:252:53:
error: no template named "atomic_bool" in namespace "std"; did you mean "atomic_load"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23402/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19529/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
